--- a/gene-rate/build.gradle
+++ b/gene-rate/build.gradle
@@ -61,7 +61,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    androidTestImplementation(deps.espresso, {
+    androidTestImplementation(deps.androidx.espresso.core, {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation deps.androidx.appCompat
